--- a/Assets/Scripts/TrainGame.asmdef
+++ b/Assets/Scripts/TrainGame.asmdef
@@ -2,7 +2,8 @@
     "name": "TrainGame",
     "rootNamespace": "",
     "references": [
-        "GUID:75469ad4d38634e559750d17036d5f7c"
+        "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:9697a9c8014546945853b11aeebae0ba"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
