--- a/Assets/Scripts/Menu/TrainGameMenu.asmdef
+++ b/Assets/Scripts/Menu/TrainGameMenu.asmdef
@@ -2,7 +2,8 @@
     "name": "TrainGameMenu",
     "rootNamespace": "",
     "references": [
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:fab317b5e2b5b6e45b4040f44a3a79e5"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
