--- a/Assets/Imported/DialogueEditor/Assets/Scripts/DialogueEditor.asmdef
+++ b/Assets/Imported/DialogueEditor/Assets/Scripts/DialogueEditor.asmdef
@@ -1,13 +1,8 @@
 {
-    "name": "TrainGame",
+    "name": "DialogueEditor",
     "rootNamespace": "",
     "references": [
-        "GUID:75469ad4d38634e559750d17036d5f7c",
-        "GUID:9697a9c8014546945853b11aeebae0ba",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:4307f53044263cf4b835bd812fc161a4",
-        "GUID:c59d9082f3faa0842b2d0b70a5ee551a",
-        "GUID:d3c9525b343c6d744ac1d41ef3e60d12"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
